--- a/docs/pages/blog/x402-via-eip3009-forwarding.mdx
+++ b/docs/pages/blog/x402-via-eip3009-forwarding.mdx
@@ -4,12 +4,12 @@ authors:
     - "thegreataxios"
 date: 2025-10-05
 title: "x402 via EIP-3009 Forwarding"
-preview: "x402 brings internet-native payments to any blockchain via ERC-3009 forwarding, enabling USDC payments across SKALE's zero-gas, infinite block space network with instant finality and no facilitator changes required."
 ---
 
 # x402 via EIP-3009 Forwarding
 
-**TL;DR**
+x402 is Coinbase's open protocol for internet-native payments that enables seamless blockchain transactions using ERC-3009 USDC. This article explores how to extend x402 to any blockchain through EIP-3009 forwarding contracts, with a focus on SKALE Network's zero-gas infrastructure that enables instant, cost-free transactions across any token on EVM-compatible chains.
+
 x402 is an open protocol for internet native payments created at Coinbase. Coinbase has been deeply aligned with Circle, and chose to build x402 process around the the use of ERC-3009 native USDC.
 
 With an increasing number of blockchains being created, many of which are utilizing bridged assets instead of official deployments from stablecoin issuers, this article explores ERC-3009, forwarding payments with ERC-3009 Forwarder, implementing with minimal facilitator changes, and more.
