--- a/docs/pages/blog/the-power-of-random.mdx
+++ b/docs/pages/blog/the-power-of-random.mdx
@@ -4,13 +4,11 @@ authors:
     - "thegreataxios"
 date: 2024-09-05
 title: "The Power of Random"
-preview: "SKALE's native RNG uses threshold signatures from 11/16 consensus nodes to generate free, synchronous, provably random numbers via BLAKE3 hashing, enabling unique NFT generation as demonstrated in Shape Storm's single-ownership roguelike."
 ---
 
 # The Power of Random
 
-**TL;DR**
-SKALE Chains provide native random number generation through threshold signatures from 11/16 asynchronous consensus nodes, creating provably random BLAKE3 hashes each block. Unlike Chainlink VRF, SKALE RNG is free (zero gas fees), synchronous (no callbacks required), and available via pre-compiled contracts. The skale-rng package enables efficient generation of multiple random numbers from a single block signature through bitwise operations and re-hashing. Shape Storm demonstrates this by generating unique NFT attributes with provable randomness, implementing single-ownership mechanics where players can only hold one randomly-generated shape at a time.
+This article explores SKALE Network's native random number generation system that uses threshold signatures from consensus nodes to create provably random numbers at zero gas cost. Unlike external oracles like Chainlink VRF, SKALE's RNG is free, synchronous, and built directly into the blockchain, enabling developers to generate unique NFT attributes and implement innovative game mechanics like Shape Storm's single-ownership roguelike where players can only hold one randomly-generated shape at a time.
 
 [Shape Storm by Eidolon](https://shapestorm.eidolon.gg/) is a rougelike that uses the blockchain for optional ownership and analytics. As rougelikes are heavily on randomization it was a natural fit to explore using the blockchain for provable randomness. SKALE offers a native random number generation endpoint that allowed the Eidolon team to take Shape Storm to a whole new level by having all the core attributes from players shapes be randomly generated on-chain and stored as as a playable NFT. This also lends itself to a future exploration of survival mechanics with upgradeable random values.
 
