Add Projects, Add Components

--- a/docs/pages/blog/ai-for-dummies-who-dont-use-ai.mdx
+++ b/docs/pages/blog/ai-for-dummies-who-dont-use-ai.mdx
@@ -6,6 +6,8 @@ date: 2024-11-04
 title: "AI for Dummies (who don't use AI)"
 ---
 
+import Footer from '../../snippets/_footer.mdx'
+
 # AI for Dummies (who don't use AI)
 
 This article explores three practical ways developers who don't use AI-first workflows can leverage artificial intelligence to enhance their productivity. From generating complex CURL requests through terminal AI tools, to implementing obscure native APIs, and creating comprehensive inline documentation for smart contracts, these targeted applications demonstrate how selective AI integration can streamline development tasks without requiring a complete overhaul of traditional coding approaches.
@@ -226,6 +228,4 @@ Interesting in using the Sediment contracts? Checkout the docs at [https://docs
 
 Using AI to code is still something I’m learning to do. However, in the meantime these are three things that make a lot of sense for software engineers to start tinkering with AI to boost their problem solving capabilities or handle tedious tasks (like documentation!).
 
-### Need Support?
-
-Whether you need an engineer, a consultant, an advisor, or a teacher; head over to [https://dirtroad.dev](https://dirtroad.dev/) and let me know how I can help you.
+<Footer />
