--- a/docs/pages/blog/authoritative-actions.mdx
+++ b/docs/pages/blog/authoritative-actions.mdx
@@ -6,6 +6,8 @@ date: 2024-09-16
 title: "Authoritative Actions"
 ---
 
+import Footer from '../../snippets/_footer.mdx'
+
 # Authoritative Actions
 
 This article explores how authoritative servers can enhance Web3 applications by preventing bot abuse and managing game state while preserving decentralization benefits through strategic implementation. By leveraging OpenZeppelin's AccessControl for role-based permissions, developers can create secure authority layers that dynamically grant temporary access rights for on-chain actions, with this approach proving most effective on zero-gas-fee blockchains like SKALE that offer instant finality without the operational challenges posed by variable transaction costs and slow confirmation times.
@@ -152,6 +154,4 @@ Additionally, with the trio of near-instant finality, no chain forking, and unif
 
 [Learn more about building on SKALE](https://skale.space/)
 
-### Need Support?
-
-Are you building a Web3 game and are unsure how to design authoritative actions? Head over to [https://dirtroad.dev](https://dirtroad.dev/) to inquire.
+<Footer />
