--- a/docs/pages/blog/enhancing-unity-game-development.mdx
+++ b/docs/pages/blog/enhancing-unity-game-development.mdx
@@ -6,6 +6,8 @@ date: 2024-11-13
 title: "Enhancing Unity Game Development"
 ---
 
+import Footer from '../../snippets/_footer.mdx'
+
 # Enhancing Unity Game Development
 
 This comprehensive overview showcases Eidolon's modular Unity SDK ecosystem designed to accelerate game development through specialized, lightweight packages that handle everything from OS device data access and physics calculations to Web3 blockchain integration and networking. Each SDK integrates seamlessly with zero conflicts, providing developers with powerful tools for randomization, timer management, controller input handling, and WalletConnect support while enabling faster development cycles for both traditional Web2 and emerging Web3 gaming experiences.
@@ -112,5 +114,4 @@ Each Eidolon package is designed to save development time, provide focused funct
 
 Additionally, while every Eidolon SDK is designed to be minimal to maintain maximum impact with the smallest footprint; the suite is also 100% modular with every package being able to work in the same codebase with zero conflicts.
 
-Interested in using Eidolon with your next Unity game?
-Reach out to [TheGreatAxios](https://t.me/thegreataxios) on Telegram!
+<Footer />
