--- a/docs/pages/blog/proof-of-encryption-in-the-cloud.mdx
+++ b/docs/pages/blog/proof-of-encryption-in-the-cloud.mdx
@@ -6,6 +6,8 @@ date: 2025-07-31
 title: "Proof-of-Encryption in the Cloud"
 ---
 
+import Footer from '../../snippets/_footer.mdx'
+
 # Proof-of-Encryption in the Cloud
 
 This article explores the revolutionary BITE Protocol that implements Proof of Encryption using threshold cryptography and multi-party signatures to enable fully encrypted blockchain transactions resistant to MEV attacks. Unlike traditional trusted execution environments, BITE embeds encryption directly into consensus through provable mathematics, requiring zero Solidity changes while offering cloud API accessibility for encrypted transactions across any programming language, with FAIR L1 blockchain pioneering the implementation before broader SKALE Chain adoption.
@@ -128,11 +130,4 @@ Yes, there are risks and trade-offs here. But I believe this is a great **early-
 
 Hi, I’m **Sawyer**, a software engineer, developer relations lead, and operational consultant with a background in healthcare and blockchain.
 
-- Follow me on [X](https://x.com/thegreataxios)
-- Connect on [GitHub](https://github.com/TheGreatAxios)
-- You can [Buy Me a Coffee](https://buymeacoffee.com/thegreataxios)
-- Need help? Contract [Dirt Road Dev](https://dirtroad.dev)
-
-Feel free to DM me with questions or collaboration ideas. Thanks for reading!
-
-— **TheGreatAxios**
+<Footer />
