--- a/docs/pages/blog/skale-governance-update-july-7-2025.mdx
+++ b/docs/pages/blog/skale-governance-update-july-7-2025.mdx
@@ -6,6 +6,8 @@ date: 2025-07-07
 title: "SKALE Governance Update - July 7, 2025"
 ---
 
+import Footer from '../../snippets/_footer.mdx'
+
 # SKALE Governance Update - July 7, 2025
 
 This governance update examines SKALE Network's remarkable achievement of surpassing 1 billion cumulative transactions while maintaining zero gas fees and instant finality. The analysis covers the SKALE DAO's hybrid governance model combining onchain economic voting with offchain technical consensus, and explores how the upcoming FAIR L1 blockchain addresses critical ecosystem challenges by enabling permissionless DeFi deployment and reducing operational costs through a synergistic gas-fee architecture that captures value within the SKALE ecosystem.
@@ -128,6 +130,4 @@ Ultimately, my goal is to help bring these ideas to life and contribute what I c
 
 Validators, developers, and token holders alike are excited—and I’m excited to work with everyone to bring this vision to life.
 
-Thank you,  
-**TheGreatAxios**  
-*Lead Community Developer*
+<Footer />
