--- a/docs/pages/blog/supercharge-your-game.mdx
+++ b/docs/pages/blog/supercharge-your-game.mdx
@@ -6,6 +6,8 @@ date: 2025-03-13
 title: "SKALE's Secret Sauce for Game Developers"
 ---
 
+import Footer from '../../snippets/_footer.mdx'
+
 # SKALE's Secret Sauce for Game Developers
 
 This comprehensive guide explores how SKALE Network revolutionizes game development by providing blockchain infrastructure that replaces traditional servers, databases, and storage systems with zero-gas, high-performance alternatives. Supporting 500-13,000 transactions per second with instant finality and native random number generation, SKALE enables developers to build asset-based games, real-time multiplayer experiences, leaderboards, and autonomous worlds while eliminating the cost barriers that make blockchain impractical for gaming on other networks.
@@ -197,4 +199,4 @@ If you read this entire article whether in one sitting or many, thank you for sp
 
 For game developers interested in adding blockchain mechanics to your game, head over to the SKALE Indie Game Accelerator at [https://skale.space/skale-indie-games-accelerator](https://skale.space/skale-indie-games-accelerator) to learn more.
 
-If your project is in need of blockchain consulting, engineering, or product design, or quality assurance testing; head over to [https://dirtroad.dev](https://dirtroad.dev/) to inquire.
+<Footer />
