--- a/docs/pages/blog/the-power-of-random.mdx
+++ b/docs/pages/blog/the-power-of-random.mdx
@@ -6,6 +6,8 @@ date: 2024-09-05
 title: "The Power of Random"
 ---
 
+import Footer from '../../snippets/_footer.mdx'
+
 # The Power of Random
 
 This article explores SKALE Network's native random number generation system that uses threshold signatures from consensus nodes to create provably random numbers at zero gas cost. Unlike external oracles like Chainlink VRF, SKALE's RNG is free, synchronous, and built directly into the blockchain, enabling developers to generate unique NFT attributes and implement innovative game mechanics like Shape Storm's single-ownership roguelike where players can only hold one randomly-generated shape at a time.
@@ -98,8 +100,4 @@ contract ShapeStorm is RNG {
 }
 ```
 
-For builders interested in taking advantage of this, make sure to head over to [https://docs.skale.space](https://docs.skale.space) and start building now.
-
-If your project is in need of blockchain consulting, engineering, or solutions architecture, head over to [https://dirtroad.dev](https://dirtroad.dev/)to inquire.
-
-For game developers and studios, checkout [https://eidolon.gg](https://eidolon.gg/) for support with bespoke game development, security reviews, and consulting.
+<Footer />
