--- a/docs/pages/blog/x402-via-eip3009-forwarding.mdx
+++ b/docs/pages/blog/x402-via-eip3009-forwarding.mdx
@@ -6,6 +6,8 @@ date: 2025-10-05
 title: "x402 via EIP-3009 Forwarding"
 ---
 
+import Footer from '../../snippets/_footer.mdx'
+
 # x402 via EIP-3009 Forwarding
 
 x402 is Coinbase's open protocol for internet-native payments that enables seamless blockchain transactions using ERC-3009 USDC. This article explores how to extend x402 to any blockchain through EIP-3009 forwarding contracts, with a focus on SKALE Network's zero-gas infrastructure that enables instant, cost-free transactions across any token on EVM-compatible chains.
@@ -250,5 +252,4 @@ With this potential growth, the only network that is capable of scaling to handl
 
 ---
 
-My name is Sawyer (a.k.a TheGreatAxios) and I am a software engineer and technical consultant.
-Checkout [the home page](/) for more of my writing and too see many of the projects I've build and support. If you are building a product or company and are looking for help with software architecture or design, product, operations, etc. -- please don't hesitate to DM me on Discord or Telegram at TheGreatAxios or shoot me an email: sawyer@dirtroad.dev.
+<Footer />
