--- a/docs/snippets/_footer.mdx
+++ b/docs/snippets/_footer.mdx
@@ -9,9 +9,10 @@
   lineHeight: '1.6'
 }}>
 
-**Sawyer** (a.k.a **TheGreatAxios**) is a software engineer and technical consultant specializing in blockchain infrastructure, onchain payments, and AI agents.
+My name is **Sawyer** (a.k.a **TheGreatAxios**) and I am a software engineer and technical consultant specializing in blockchain infrastructure and developer tooling.
+Currently serving as **VP of Developer Success at SKALE**, I am focused on accelerating blockchain adoption through innovative tooling and developer experience improvements.
 
-Currently serving as **VP of Developer Success at SKALE**, he focuses on accelerating blockchain adoption through innovative tooling and developer experience improvements.
+Recently, I've been very into the agentic world and have been creating adapters, fine-tuning models, creating agents, and experimenting with all things AI; especially x402.
 
 **Connect & Support:**
 - Follow on [X/Twitter](https://x.com/thegreataxios) for blockchain insights and AI agent discussions
