Add first push of blog

--- a/docs/pages/blog/the-rise-of-the-machine-economy.mdx
+++ b/docs/pages/blog/the-rise-of-the-machine-economy.mdx
@@ -23,7 +23,7 @@ On top of that, SKALE delivers the only single-slot finality EVM in production t
 SKALE set its sights on being home to **high-performance, compute-intensive decentralized applications**, especially in areas like onchain gaming, DePIN, and real-time data processing.
 The screenshot below is from [dAppRadar](https://dappradar.com)-- one of the leading data and analytics platforms in the blockchain space -- on 8/22/25 and shows that 3 of the top 5 games in blockchain are on SKALE. If you double click into each you will see that all three do a significant amount if not the majority of their compute on SKALE.
 
-![[dappradar-top-5-games-8-22-25.png]]
+![dappradar-top-5-games-8-22-25](../images/dappradar-top-5-games-8-22-25.png)
 
 The architecture—featuring customizable, zero-gas chains with high throughput and low latency—makes it the go-to blockchain platform for apps that literally live in the world of millions of transactions. The above dApps are built across the [Nebula](https://portal.skale.space/chains/nebula) and [Calypso](https://portal.skale.space/chains/calyspo) SKALE Hub Chains.
 
@@ -52,6 +52,7 @@ A fantastic read from Toyota, [this research report](https://www.toyota-blockcha
 "We chose Avalanche because its design centered on multiple L1s (formerly Subnets), its fast finality, and its native ICM align with MON's philosophy of _building locally, collaborating globally._" -- [Toyota Blockchain Lab](https://www.toyota-blockchain-lab.org/library/mon-orchestrating-trust-into-mobility-ecosystems#:~:text=We%20chose%20Avalanche%20because%20its%20design%20centered%20on%20multiple%20L1s%20(formerly%20Subnets)%2C%20its%20fast%20finality%2C%20and%20its%20native%20ICM%20align%20with%20MON's%20philosophy%20of%20building%20locally%2C%20collaborating%20globally.)
 
 Based on the above, SKALE is and will remain a top contender thanks to being the only multichain network with instant finality and zero gas fees that also has sustainable mechanics.
+
 ## Collaborative Technologies
 ### What is x402?
 
@@ -73,6 +74,7 @@ There has been a significant amount of research and growth in this area:
 - https://github.com/uport-project/ethr-did-registry
 
 One of the outstanding questions with both x402 and agentic collaboration is identity and proving. With SKALE's zero gas fee nature, storing DIDs onchain could be done in some cases for free and in others for flat rates (to avoid DoS attacks).
+
 ## A Machine-compatible Future
 
 This section will read a bit like a movie. Let's start with the ending.
