--- a/docs/snippets/_footer.mdx
+++ b/docs/snippets/_footer.mdx
@@ -1,22 +1,58 @@
----
+import { Github } from "lucide-react";
 
 <div style={{
-  borderTop: '1px solid #e5e7eb',
-  paddingTop: '2rem',
-  marginTop: '3rem',
-  fontSize: '0.9rem',
-  color: '#6b7280',
-  lineHeight: '1.6'
+  borderTop: '1px solid #e1e5e9',
+  padding: '3rem 0 2rem',
+  marginTop: '4rem',
+  textAlign: 'center',
+  maxWidth: '600px',
+  marginLeft: 'auto',
+  marginRight: 'auto'
 }}>
 
-My name is **Sawyer** (a.k.a **TheGreatAxios**) and I am a software engineer and technical consultant specializing in blockchain infrastructure and developer tooling.
-Currently serving as **VP of Developer Success at SKALE**, I am focused on accelerating blockchain adoption through innovative tooling and developer experience improvements.
+  <div style={{
+    fontSize: '0.95rem',
+    color: '#64748b',
+    lineHeight: '1.7',
+    marginBottom: '2rem'
+  }}>
+    **Sawyer** (TheGreatAxios) is VP of Developer Success at [SKALE](https://skale.space),
+    focused on blockchain infrastructure and developer tooling.
+    Currently exploring AI agents and x402 protocols.
+  </div>
 
-Recently, I've been very into the agentic world and have been creating adapters, fine-tuning models, creating agents, and experimenting with all things AI; especially x402.
+  <div style={{
+    display: 'flex',
+    flexDirection: 'row',
+    gap: '2rem',
+    alignItems: 'center',
+    justifyContent: 'center',
+    fontSize: '0.9rem',
+    flexWrap: 'wrap'
+  }}>
+    <a href="https://x.com/thegreataxios"
+       style={{ color: '#3b82f6', textDecoration: 'none', fontWeight: '500', display: 'flex', alignItems: 'center', gap: '0.5rem' }}
+       onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
+       onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
+      <span>𝕏</span>
+      <span>Connect with me on Twitter</span>
+    </a>
 
-**Connect & Support:**
-- Follow on [X/Twitter](https://x.com/thegreataxios) for blockchain insights and AI agent discussions
-- Send a DM for collaboration opportunities or project assistance
-- Support ongoing open source work via [Buy Me a Coffee](https://buymeacoffee.com/thegreataxios)
+    <a href="https://github.com/thegreataxios"
+       style={{ color: '#3b82f6', textDecoration: 'none', fontWeight: '500', display: 'flex', alignItems: 'center', gap: '0.5rem' }}
+       onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
+       onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
+      <span><Github /></span>
+      <span>Checkout my GitHub</span>
+    </a>
+
+    <a href="https://buymeacoffee.com/thegreataxios"
+       style={{ color: '#f59e0b', textDecoration: 'none', fontWeight: '500', display: 'flex', alignItems: 'center', gap: '0.5rem' }}
+       onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
+       onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
+      <span>☕</span>
+      <span>Buy me a coffee</span>
+    </a>
+  </div>
 
 </div>
