Update Sponsor Page

--- a/docs/pages/sponsor.mdx
+++ b/docs/pages/sponsor.mdx
@@ -2,17 +2,16 @@
 layout: minimal
 ---
 
-# Sponsor or Hire
-
-[Help support me with a coffee](https://buymeacoffee.com/thegreataxios)
+# Sponsor 
 
 ---
 
 Hi!
 
-My name is Sawyer and I am a contractor and work with a number of projects.
-My biggest project is SKALE where I work as the VP of Developer Success.
+My name is Sawyer. I’m a contractor working on a variety of projects, with my largest being SKALE, where I serve as VP of Developer Success.
 
-In addition to that, I write a good amount and code a lot. If you are interested in sponsoring one of my blog posts, the development
-of a proof of concept, paid research, or testing and feedback; you can email at
-sawyer@dirtroad.dev or DM me on [Twitter](https://x.com/thegreataxios).
+In addition to that, I write extensively and code regularly.
+
+If you’re interested in sponsoring a blog post, development of a proof of concept, commissioning paid research, or having me test and provide feedback, feel free to email me at sawyer@dirtroad.dev or DM me on Twitter at [thegreataxios](https://x.com/thegreataxios).
+
+You can also [help support me with a coffee](https://buymeacoffee.com/thegreataxios).
