Update Name of Post

--- a/docs/pages/blog/the-role-of-pay-per-tool-in-an-agentic-world.mdx
+++ b/docs/pages/blog/the-role-of-pay-per-tool-in-an-agentic-world.mdx
@@ -3,7 +3,7 @@ layout: minimal
 authors:
     - "thegreataxios"
 date: 2025-10-20
-title: "The Role of Pay-Per-Tool"
+title: "The Role of Pay-Per-Tool in an Agentic World"
 ---
 
 # The Role of Pay-Per-Tool in an Agentic World
