--- a/docs/pages/blog/mcp-feedback-no-1.mdx
+++ b/docs/pages/blog/mcp-feedback-no-1.mdx
@@ -36,46 +36,27 @@ The following are personal opinions and perspectives on the Model Context Protoc
 
 - More guidance for new developers on where and when MCP is actually useful or needed. MCP has been touted as a “one-size-fits-all” solution for developers coming into agentic systems. We need a better way to communicate what pieces should be used where in these growing systems.
 
-## The Ideal Experience from an MCP Framework
+## My Personal Requests & Ideal Experience
 
-The following are primarily for those implementing MCP frameworks, which are certainly more of a “buy-in” from the developer. Similar to the decision between Next.js, Tanstack, Remix, or Vite, the decision to adopt an MCP framework isn’t something you just throw away and switch. You choose to use the framework because it’s a good fit for your project, team, and needs.
+- More clarity on how to use MCPs from anyone touting MCP libraries.
 
-- Provide an init tool to help avoid versioning differences (see [xmcp](https://xmcp.dev/docs/getting-started/installation#automatic-installation)).
+- If you are offering MCPs, make it easy for me to pay you to host them for me.
 
-- Utilize a configuration file for the validation of features (yes, another one).
+- If providing agentic coding tools, provide examples of how to consume the MCP in all popular tools (not just Cursor).
 
-```typescript
-interface MCPConfig {
-    location: "local" | "remote";
-    cors: {
-        origin: string;
-    };
-    type: "api" | "agent" | "both";
-    toolLayout: "per-tool" | "aggregated"; // per-tool = 1 tool per action; aggregated uses "select_tool" and "execute_tool" to reduce context consumption
-    version: string; // version of the MCP server
-}
+- More information (or point me in the right direction) for better authentication schemes, guidance, and security-related resources for MCPs.
 
-const config: MCPConfig = {
-    location: "remote",
-    cors: {
-        origin: "*"
-    },
-    type: "api",
-    toolLayout: "aggregated",
-    version: "1"
-};
-```
+- One or two more frameworks to push and compete with xmcp and Vercel. More competition drives innovation. Preferably if one of these can just fully abstract all of the "MCP" code away and just let me focus on the logic that would be lovely. (Happy to provide further guidance, but this is where the magic SaaS is at in my opionion)
 
-- Can the use of the above config enable a form of static analysis that can run during build or setup to check and flag whether things are set up properly?
+- A cloud platform built for hosting MCPs—handling sandbox execution, AI Gateway, authentication (without OAuth, please), x402 integration, etc. I’m a big believer in a SaaS model for MCPs. It’s unrealistic to expect most developers to run their own servers. Also a great opportunity to enable fractional resourcing that hot-swaps scoped API keys for different customers. (High risk, high reward?)
 
-## My Personal Requests
-More clarity on how to use MCPs from anyone touting MCP libraries.
-If you are offering MCPs, make it easy for me to pay you to host them for me.
-If providing agentic coding tools, provide examples of how to consume the MCP in all popular tools (not just Cursor).
-More information (or point me in the right direction) for better authentication schemes, guidance, and security-related resources for MCPs.
-One or two more frameworks to push and compete with xmcp and Vercel. More competition drives innovation.
-A cloud platform built for hosting MCPs—handling sandbox execution, AI Gateway, authentication (without OAuth, please), x402 integration, etc. I’m a big believer in a SaaS model for MCPs. It’s unrealistic to expect most developers to run their own servers. Also a great opportunity to enable fractional resourcing that hot-swaps scoped API keys for different customers. (High risk, high reward?)
-Payment management and tracking software for MCPs. I think there’s a really interesting opportunity with x402 for someone to build middleware that handles tracking, spending, and analytics for the callers (could be cloud or local). For example: my agent calls an MCP server N times per day and spends X via Y.
+- Payment management and tracking software for MCPs. I think there’s a really interesting opportunity with x402 for someone to build middleware that handles tracking, spending, and analytics for the callers (could be cloud or local). For example: my agent calls an MCP server N times per day and spends X via Y.
+
+- Make it easier or standardized to define whether the MPC is a "per-tool" or "aggregated" toolset. For agents, this would ideally allow them to determine if they should call an MCP server that has "math_add" "math_subtract" or an MCP that has "search_tool" -> "add two numbers, a + b". More general purpose models seem like they are able to better benfit from aggregated toolsets (tbd) while smaller specialized models may be better for train adapters on specific tools.
+
+- If integrating with x402, give me a set of 2-3 defaults: Base, SKALE, and Solana. I don't want to have to keep specifying the same thing over and over again. I should be able to but just default me to the most common chains + the best technically.
+
+- Don't force me to specify bypass methods. Middleware should handle that for me since the bypass methods are primarily standardized at this point. I should be able to change WHO can bypass though
 
 ## Conclusion
 
