--- a/docs/pages/blog/mcp-feedback-no-1.mdx
+++ b/docs/pages/blog/mcp-feedback-no-1.mdx
@@ -56,7 +56,7 @@ The following are personal opinions and perspectives on the Model Context Protoc
 
 - If integrating with x402, give me a set of 2-3 defaults: Base, SKALE, and Solana. I don't want to have to keep specifying the same thing over and over again. I should be able to but just default me to the most common chains + the best technically.
 
-- Don't force me to specify bypass methods. Middleware should handle that for me since the bypass methods are primarily standardized at this point. I should be able to change WHO can bypass though
+- Don't force me to specify bypass methods. Middleware should handle that for me since the bypass methods are primarily standardized at this point. I should be able to change WHO can bypass based on IP/secrets/JWT/etc.
 
 ## Conclusion
 
