--- a/docs/pages/blog/authoritative-actions.mdx
+++ b/docs/pages/blog/authoritative-actions.mdx
@@ -117,7 +117,7 @@ contract Bounties is AccessControl {
 
 #### **Addition of Roles**
 
-The addition of the AccessControl contract by [OpenZeppelin](http://htt/) is recommended since it enables the greatest level of flexiblity and scalability. You can setup as many servers as needed with a signer on each and load balance them to manage many calls simultaneously. Additionally, roles compared to ownable makes it simpler to assign different “wallets” to manage different functions while also maintaining scalability.
+The addition of the AccessControl contract by [OpenZeppelin](https://docs.openzeppelin.com/contracts/5.x/access-control) is recommended since it enables the greatest level of flexiblity and scalability. You can setup as many servers as needed with a signer on each and load balance them to manage many calls simultaneously. Additionally, roles compared to ownable makes it simpler to assign different “wallets” to manage different functions while also maintaining scalability.
 
 #### **An Authoritative Function**
 
