--- a/docs/pages/blog/the-role-of-pay-per-tool-in-an-agentic-world.mdx
+++ b/docs/pages/blog/the-role-of-pay-per-tool-in-an-agentic-world.mdx
@@ -39,7 +39,7 @@ Pay-per-tool is a concept or view of how a simple flow of an agent calling a too
 
 Using x402, tools can be paid for per use. This means that the user only pays for the tool they use rather than signing up for hundreds of subscriptions. Additionally, this allows tooling providers to properly pass on the costs as the internet changes and pay-per-crawl becomes a reality.
 
-![Flow of Pay-Per-Tool](../images/pay-per-tool.png)
+![Flow of Pay-Per-Tool](../../images/pay-per-tool.png)
 
 More specifically, pay-per-tool is already being explored through a number of open protocols, including the [Agent Payment Protocol](https://ap2-protocol.org) from Google, [x402](https://x402.org) from Coinbase, and [Agentic Commerce Protocol](https://www.agenticcommerce.dev) from OpenAI and Stripe.
 
