Move Future Blogs to Holding, Update Fooder

--- a/docs/snippets/_footer.mdx
+++ b/docs/snippets/_footer.mdx
@@ -16,9 +16,7 @@ import { Github, Globe } from "lucide-react";
     lineHeight: '1.7',
     marginBottom: '2rem'
   }}>
-    **Sawyer** (TheGreatAxios) is VP of Developer Success at [SKALE](https://skale.space),
-    focused on blockchain infrastructure and developer tooling.
-    Currently exploring AI agents and x402 protocols.
+    **Sawyer** (TheGreatAxios) is VP of Developer Success at [SKALE](https://skale.space) and an AI Engineer building agents and agentic platforms.
   </div>
 
   <div style={{
