--- a/docs/snippets/_footer.mdx
+++ b/docs/snippets/_footer.mdx
@@ -1,4 +1,4 @@
-import { Github, Globe } from "lucide-react";
+import { Github, Globe, Linkedin } from "lucide-react";
 
 <div style={{
   borderTop: '1px solid #e1e5e9',
@@ -22,14 +22,14 @@ import { Github, Globe } from "lucide-react";
   <div style={{
     display: 'flex',
     flexDirection: 'row',
-    gap: '2rem',
+    gap: '0.5rem',
     alignItems: 'center',
     justifyContent: 'center',
     fontSize: '0.9rem',
     flexWrap: 'wrap'
   }}>
     <a href="https://x.com/thegreataxios"
-       style={{ color: '#3b82f6', textDecoration: 'none', fontWeight: '500', display: 'flex', alignItems: 'center', gap: '0.5rem' }}
+       style={{ color: '#3b82f6', textDecoration: 'none', fontWeight: '500', display: 'flex', alignItems: 'center', gap: '0.25rem' }}
        onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
        onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
       <span>𝕏</span>
@@ -37,11 +37,19 @@ import { Github, Globe } from "lucide-react";
     </a>
 
     <a href="https://github.com/thegreataxios"
-       style={{ color: '#3b82f6', textDecoration: 'none', fontWeight: '500', display: 'flex', alignItems: 'center', gap: '0.5rem' }}
+       style={{ color: '#3b82f6', textDecoration: 'none', fontWeight: '500', display: 'flex', alignItems: 'center', gap: '0.25rem' }}
        onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
        onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
       <span><Github /></span>
       <span>Checkout my GitHub</span>
+    </a>
+
+    <a href="https://linedin.com/in/sawyercutler"
+       style={{ color: '#3b82f6', textDecoration: 'none', fontWeight: '500', display: 'flex', alignItems: 'center', gap: '0.25rem' }}
+       onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
+       onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
+      <span><Linkedin /></span>
+      <span>Connect with me on LinkedIn</span>
     </a>
 
     <a href="https://dirtroad.dev"
@@ -49,7 +57,7 @@ import { Github, Globe } from "lucide-react";
        onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
        onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
       <span><Globe /></span>
-      <span>Dirt Road Dev Builder Documentation</span>
+      <span>Builder Docs</span>
     </a>
 
     <a href="https://buymeacoffee.com/thegreataxios"
