--- a/docs/pages/blog/memory-for-the-agentic-economy.mdx
+++ b/docs/pages/blog/memory-for-the-agentic-economy.mdx
@@ -8,7 +8,7 @@ title: "Memory for the Agentic Economy"
 
 # Memory for the Agentic Economy
 
-AI systems have moved past the era of a single LLM doing everything and now represent a complex ecosystem of context, memory, prompting, tools, and skills. Multi-agent systems are increasingly common in production, but they are more often found inside private systems. Why? Sharing information between unknown agents is a major challenge. Protocols like Google's Agent-2-Agent (A2A) use structured JSON messages to communicate, but they do not solve the problem of variable-length memory across open systems and swarms as tasks grow more complex.
+AI systems have moved past the era of a single LLM doing everything and now represent a complex ecosystem of context, memory, prompting, tools, and skills. Multi-agent systems are increasingly common in production, but they are more often found inside private systems. Why? Sharing information between unknown agents is a major challenge. Protocols like Google's Agent-2-Agent (A2A) use structured JSON messages to communicate, but they do not solve the problem of variable memory across open systems and swarms as tasks grow more complex.
 
 This raises a few critical questions that, if answered, could unlock key blockers to understanding the machine economy:
 
