Add Docs are for Agents, SKALE Blog

--- a/docs/snippets/_footer.mdx
+++ b/docs/snippets/_footer.mdx
@@ -16,7 +16,7 @@ import { Github, Globe, Linkedin } from "lucide-react";
     lineHeight: '1.7',
     marginBottom: '2rem'
   }}>
-    **Sawyer** (TheGreatAxios) is VP of Developer Success at [SKALE](https://skale.space) and an AI Engineer building agents and agentic platforms.
+    **Sawyer** (TheGreatAxios) is VP of Developer Success at [SKALE](https://skale.space) and building agents, blockchain, and healthcare products and tools.
   </div>
 
   <div style={{
@@ -33,7 +33,7 @@ import { Github, Globe, Linkedin } from "lucide-react";
        onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
        onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
       <span>𝕏</span>
-      <span>Connect with me on Twitter</span>
+      {/* <span>Connect with me on Twitter</span> */}
     </a>
 
     <a href="https://github.com/thegreataxios"
@@ -41,7 +41,7 @@ import { Github, Globe, Linkedin } from "lucide-react";
        onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
        onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
       <span><Github /></span>
-      <span>Checkout my GitHub</span>
+      {/* <span>Checkout my GitHub</span> */}
     </a>
 
     <a href="https://linedin.com/in/sawyercutler"
@@ -49,7 +49,7 @@ import { Github, Globe, Linkedin } from "lucide-react";
        onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
        onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
       <span><Linkedin /></span>
-      <span>Connect with me on LinkedIn</span>
+      {/* <span>Connect with me on LinkedIn</span> */}
     </a>
 
     <a href="https://dirtroad.dev"
@@ -57,15 +57,7 @@ import { Github, Globe, Linkedin } from "lucide-react";
        onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
        onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
       <span><Globe /></span>
-      <span>Builder Docs</span>
-    </a>
-
-    <a href="https://buymeacoffee.com/thegreataxios"
-       style={{ color: '#f59e0b', textDecoration: 'none', fontWeight: '500', display: 'flex', alignItems: 'center', gap: '0.5rem' }}
-       onMouseOver={(e) => { e.target.style.textDecoration = 'underline'; }}
-       onMouseOut={(e) => { e.target.style.textDecoration = 'none'; }}>
-      <span>☕</span>
-      <span>Buy me a coffee</span>
+      {/* <span>Builder Docs</span> */}
     </a>
   </div>
 
